--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: black
         language_version: python3
         args: ["--line-length", "120"]
+        exclude: '\.(csv|yml|yaml)$'
   # - repo: https://github.com/pycqa/flake8
   #  rev: 4.0.1
   #  hooks:
@@ -18,3 +19,4 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        exclude: '\.(csv|yml|yaml)$'
